#===========================================================================
#
#   include/Makefile.am
#
#===========================================================================
# $Id: Makefile.am,v 1.1 1998/05/26 07:02:54 forster Exp $

SUBDIRS = GTL

#---------------------------------------------------------------------------
#   end of file
#---------------------------------------------------------------------------

